<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_margin="5dp"
            app:cardElevation="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/logo2"
                android:contentDescription="@string/animation" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/header_card"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_details_header"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    android:textSize="30sp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        app:lottie_rawRes="@raw/product"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        >

    </com.airbnb.lottie.LottieAnimationView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/form_card">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contactPersonNameTIL"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/product_details"
                    app:boxStrokeColor="@android:color/white"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/ETlabel"
                    app:helperTextEnabled="true"
                    app:hintTextColor="@color/ETbox"
                    >
                    <!--app:helperText="@string/helper_email"-->

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/contactPersonNameET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/productReferenceTIL"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/product_merchant_ref"
                    app:boxStrokeColor="@android:color/white"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/ETlabel"
                    app:helperTextEnabled="true"
                    app:hintTextColor="@color/ETlabel"
                    >
                    <!--app:helperText="@string/helper_email"-->

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productReferenceET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/productDetailsTIL"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/product_price"
                    app:boxStrokeColor="@android:color/white"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/ETlabel"
                    app:helperTextEnabled="true"
                    app:hintTextColor="@color/ETbox"
                    >
                    <!--app:helperText="@string/helper_email"-->

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productDetailsET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/packageOpt"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"/>
                <Spinner
                    android:id="@+id/packageSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_bg"
                    android:layout_margin="10dp"
                    android:dropDownSelector="@drawable/spdown"
                    android:theme="@style/spinner"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deliveryType"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="2dp"
                    android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/bkashRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/homeDeliveryOpt"/>
                <RadioButton
                    android:id="@+id/rocketRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pointDeliveryOpt"/>
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/approx_charge"
                    android:layout_marginEnd="5dp"
                    android:textColor="@android:color/holo_red_dark"
                    android:gravity="end"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/next"
                        android:fontFamily="monospace"
                        android:textStyle="bold"
                        android:text="@string/button_next"
                        android:onClick="gotoCustomerDetails"
                        android:textColor="@android:color/white"
                        android:background="@android:color/transparent"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>



</LinearLayout>