<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/logo2"
                android:contentDescription="@string/animation" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/header_card"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/customer_details_header"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/location">

    </com.airbnb.lottie.LottieAnimationView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_card"
                    android:orientation="vertical">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/customerNameTIL"
                                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginBottom="10dp"
                                android:hint="@string/customer_name"
                                app:boxStrokeColor="@android:color/white"
                                app:endIconMode="clear_text"
                                app:endIconTint="@color/ETlabel"
                                app:helperTextEnabled="true"
                                app:hintTextColor="@color/ETbox">
                                <!--app:helperText="@string/helper_email"-->

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/customerNameET"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="text" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/customerPhoneTIL"
                                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_marginTop="10dp"
                                android:hint="@string/customer_phone"
                                app:boxStrokeColor="@android:color/white"
                                app:endIconMode="clear_text"
                                app:endIconTint="@color/ETlabel"
                                app:helperTextEnabled="true"
                                app:hintTextColor="@color/ETlabel">
                                <!--app:helperText="@string/helper_email"-->

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/customerPhoneET"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="phone" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/customerHouseTIL"
                                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_marginTop="10dp"
                                android:hint="@string/customer_home"
                                app:boxStrokeColor="@android:color/white"
                                app:endIconMode="clear_text"
                                app:endIconTint="@color/ETlabel"
                                app:helperTextEnabled="true"
                                app:hintTextColor="@color/ETbox">
                                <!--app:helperText="@string/helper_email"-->

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/customerHouseET"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="text" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/customerDistrictTIL"
                                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_marginTop="10dp"
                                android:hint="@string/customer_district"
                                app:boxStrokeColor="@android:color/white"
                                app:endIconMode="clear_text"
                                app:endIconTint="@color/ETlabel"
                                app:helperTextEnabled="true"
                                app:hintTextColor="@color/ETbox">
                                <!--app:helperText="@string/helper_email"-->

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/customerDistrictET"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="text" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/customerThanaTIL"
                                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_marginTop="10dp"
                                android:hint="@string/customer_thana"
                                app:boxStrokeColor="@android:color/white"
                                app:endIconMode="clear_text"
                                app:endIconTint="@color/ETlabel"
                                app:helperTextEnabled="true"
                                app:hintTextColor="@color/ETbox">
                                <!--app:helperText="@string/helper_email"-->


                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/customerThanaET"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="text" />

                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>

                    </ScrollView>




                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:fontFamily="monospace"
                            android:textStyle="bold"
                            android:background="@android:color/transparent"
                            android:drawableEnd="@drawable/next"
                            android:text="@string/button_next"
                            android:textColor="@android:color/white" />
                    </RelativeLayout>


                </LinearLayout>




        </androidx.cardview.widget.CardView>







</LinearLayout>


